GoPro on Your Visits:  Empowering Local Exploration Through Seamless Search

--- a/api /v1/templates/landing_page/index.html
+++ b/api /v1/templates/landing_page/index.html
@@ -7,10 +7,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
-    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
-      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
+    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">                                                                                              <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>                           
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
@@ -29,10 +26,10 @@
         <div class="carousel-item" style="background-image: url(../static/assets/img/slide/slide-2.jpg)">
           <div class="container">
             <h2>Services Availability</h2>
-            <p>At GreenApp, we've revolutionized garbage collection services, making them not only accessible but also incredibly easy to use. With our intuitive platform, clients can effortlessly browse and select from a wide range of waste management options tailored to their needs. Say goodbye to hassle and hello to convenience – our platform puts the power of choice right at your fingertips, ensuring a seamless experience for every user.</p>
+            <p>At GoProApp we make healthcare very navigable.</p>
 =======
             <h2>Sustainability</h2>
-            <p>"Nature always wears the colors of the spirit." - Ralph Waldo Emerson</p>
+            <p>"Healthcare is the most precious thing." - Ralph Waldo Emerson</p>
             <a href="#about" class="btn-get-started scrollto">Read More</a>
           </div>
         </div>
@@ -41,10 +38,10 @@
         <div class="carousel-item" style="background-image: url(../static/assets/img/slide/slide-3.jpg)">
           <div class="container">
             <h2>Time Concious and Client Tailored</h2>
-            <p>With GreenApp, accessing essential services is as simple as a single click. Our platform connects users with a diverse range of service providers who are readily available to fulfill their needs. From home maintenance to healthcare, our network ensures that help is always just one click away. Say goodbye to time-consuming searches and waiting periods – with GreenApp, convenience and efficiency are guaranteed.</p>
+            <p>Lets navigate the healthcare globe.</p>
 =======
             <h2>Ecology</h2>
-            <p>We wont have a society if we destroy the environment.</p>
+            <p>We wont have a society if we dont have healthcare.</p>
             <a href="#about" class="btn-get-started scrollto">Read More</a>
           </div>
         </div>
@@ -72,32 +69,32 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="fas fa-heartbeat"></i></div>
-              <h4 class="title"><a href="">Waste collection(Timely)</a></h4>
-              <p class="description">We ensure a timely waste collection services as our service providers are one click away and very time consious.</p>
+              <h4 class="title"><a href="">HealthFacility(Timely)</a></h4>
+              <p class="description">We ensure a timely healthcare services as our service providers are one click away and very time consious.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="fas fa-pills"></i></div>
-              <h4 class="title"><a href="">Medical Waste</a></h4>
-              <p class="description">We go to every health facility in every corner of this country to ensure that we have a clean health facility and provide inseneration services according to standards set.</p>
+              <h4 class="title"><a href="">All in one healthcare</a></h4>
+              <p class="description">We bring all hospitals in one basket.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="fas fa-thermometer"></i></div>
-              <h4 class="title"><a href="">Construction Waste</a></h4>
-              <p class="description">You are building a new home or demolishing old homes, we got you covered. All your construction wastes are in good hands as we will come all the way to your location to pick it up on time.</p>
+              <h4 class="title"><a href="">Inclusion</a></h4>
+              <p class="description">No health facility is left behind.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="fas fa-dna"></i></div>
-              <h4 class="title"><a href="">Organic Waste</a></h4>
-              <p class="description">Looking for a place to dispose your kitchen waste, GreenApp is the solution for your nightmare. We have our service vehicles ready to tow any route to reach your deatination.</p>
+              <h4 class="title"><a href="">Healthy nation</a></h4>
+              <p class="description">We ensure everyone access treatment on time.</p>
             </div>
           </div>
 
