--- a/api/v1/templates/forms/base.html
+++ b/api/v1/templates/forms/base.html
@@ -89,12 +89,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Medicio</h3>
+              <h3>GoPro on Your Visits</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Muindi Mbingu Street <br>
+                Nairobi 535-00101, Kenya<br><br>
+                <strong>Phone:</strong> +254 754008855<br>
+                <strong>Email:</strong> gopro@info.co.ke<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -120,17 +120,17 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Doctor Care</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Dentistry</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Nursing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Physical therapy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Outpatient care</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Inspiring healthy habits</h4>
+            <p>Healthcare with more comfort</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -143,7 +143,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Godfrey</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>GoPro on Your Visits</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
