GoPro on Your Visits

--- a/api/v1/templates/forms/hospital_reg.html
+++ b/api/v1/templates/forms/hospital_reg.html
@@ -68,7 +68,7 @@
   </main><!-- End #main -->
   {% endblock %}
 
-    <!-- h1>Registration</h1>
+    <h1>Registration</h1>
     <h4>{{msg}}</h4>
     <form method="POST" action="{{ url_for('Hospital_registration') }}">
         {{ form.hidden_tag() }}
@@ -89,4 +89,4 @@
         <button type="submit">Register</button>
     </form>
 </body>
-</html -->
+</html>
