--- a/api/v1/templates/forms/base.html
+++ b/api/v1/templates/forms/base.html
@@ -60,7 +60,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--h1 class="logo me-auto"><a href="index.html">Medicio</a></h1> -->
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <!--nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
