--- a/api/v1/templates/forms/base.html
+++ b/api/v1/templates/forms/base.html
@@ -89,7 +89,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>GoPro on Your Visits</h3>
+              <h3>Contact Us</h3>
               <p>
                 Muindi Mbingu Street <br>
                 Nairobi 535-00101, Kenya<br><br>
