--- a/api/v1/static/assets/css/style.css
+++ b/api/v1/static/assets/css/style.css
@@ -1,8 +1,8 @@
 /**
-* Template Name: Medicio
+* Template Name: GoPro on Your Visits
 * Updated: Sep 18 2023 with Bootstrap v5.3.2
 * Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
-* Author: BootstrapMade.com
+* Author: Isaac Githinji
 * License: https://bootstrapmade.com/license/
 */
 
@@ -171,7 +171,7 @@ h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 120px;
 }
 
 /**
