--- a/api/v1/templates/landing_page/index.html
+++ b/api/v1/templates/landing_page/index.html
@@ -7,11 +7,14 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
-    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">                                                                                              <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>                           
+    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(../static/assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image:url(../static/assets/img/slide/slide-1.jpg)">
           <div class="container">
             <h2>Welcome to <span>GoProApp</span></h2>
             <p>Welcome to Go Pro App.</p>
@@ -23,7 +26,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(../static/assets/img/slide/slide-2.jpg)">
+        <div class="carousel-item" style="background-image:url(../static/assets/img/slide/slide-2.jpg)">
           <div class="container">
             <h2>Services Availability</h2>
             <p>At GoProApp we make healthcare very navigable.</p>
