--- a/api/v1/templates/forms/base.html
+++ b/api/v1/templates/forms/base.html
@@ -128,12 +128,12 @@
             </ul>
         </div-->
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!--div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Inspiring healthy habits</h4>
             <p>Healthcare with more comfort</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+        </form-->
 
           </div>
 
